--- a/app/src/main/res/layout/rv_item_area_list.xml
+++ b/app/src/main/res/layout/rv_item_area_list.xml
@@ -10,8 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:padding="8dp"
+        android:padding="12dp"
         android:textSize="16sp"
         tools:text="北京" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorPrimary" />
 </LinearLayout>
